Add experiments directory with initial setup for single-source question generation
- Updated .gitignore to include experiment-related files.
- Created README.md for experiments documentation.
- Added requirements.txt for necessary dependencies.
- Introduced Jupyter notebooks for exploratory data analysis and question generation.
- Implemented scripts for generating and critiquing QA pairs, including configuration and export functionalities.
- Added plotting functions for visualizing evaluation results.

--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,10 @@ dist
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .vite/
+
+#----------------------------------------------------------
+# Experiments .gitignore
+#----------------------------------------------------------
+
+experiments_db/
+output/
